# NiceApiManager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260315_0001_initial_schema.py  20260315_0002_instance_tags_and_quota_per_unit.py  20260324_0003_instance_billing_mode.py  20260325_0004_app_settings_and_password_hash.py  20260325_0005_daily_usage_stats.py  20260325_0006_instance_program_and_access_token.py  20260325_0007_runtime_app_settings.py  20260328_0008_instance_sync_proxy_settings.py  20260328_0009_instance_proxy_mode_and_priority.py  20260405_0010_notification_settings_and_states.py  20260405_0011_notification_logs.py
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/clients/: __init__.py  newapi.py
app/core/: auth.py  config.py  database.py  logging.py  scheduler.py  time.py
app/models/: __init__.py  app_setting.py  base.py  daily_usage_stat.py  group_ratio.py  instance.py  instance_session.py  notification_log.py  notification_rule_state.py  pricing_model.py  sync_run.py  user_snapshot.py
app/schemas/: app_setting.py  auth.py  dashboard.py  group.py  instance.py  notification_log.py  pricing.py  status.py  sync_run.py
app/services/: app_setting_service.py  dashboard_service.py  group_service.py  instance_filters.py  instance_service.py  notification_log_service.py  notification_service.py  (+5 more)
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+46 files in other folders)
